# stardew-valley-character-preview

./: .eslintrc.js  README.md  package.json  rollup.config.js  svelte.config.js
.github/workflows/: release.yml
public/: global.css  index.html
src/: App.svelte  getSaveFile.js  main.js  utils.js
src-tauri/: Cargo.toml  base-icon.pdn  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs  tint.rs
