[package]
name = "stardew-project"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "stardew-project"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.125", features = [ "derive" ] }
tauri = { version = "0.11.1", features = [ "all-api" ] }
base64 = "0.13.0"
image = "0.23.14"
imageproc = "0.22.0"
css-color-parser = "0.1.2"

[target."cfg(windows)".build-dependencies]
winres = "0.1.11"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "stardew-project"
path = "src/main.rs"
